--- a/src/Components/UploadMe.css
+++ b/src/Components/UploadMe.css
@@ -26,20 +26,11 @@
   font-size: 30px;
 }
 
-.svg2 img {
-  border-radius: 50%;
-  width: 70px;
-  height: 70px;
-}
 .svg2 svg {
-  background-color: blueviolet;
-  border-radius: 50%;
-  width: 40px;
-  height: 40px;
-  padding: 10px;
-}
-.svg2 {
-  text-align: center;
+  position: absolute;
+  top: 50px;
+  left: 55px;
+  cursor: pointer;
 }
 form {
   width: 100%;
